# Simple-database-source-code

./: .gitignore  CMakeLists.txt  README.md
Source/: main.cpp
Source/Classes/Objects/: transaction_block.cpp  transaction_block.hpp  variable_stack.cpp  variable_stack.hpp
Source/Functions/: database_command.cpp  database_command.hpp
Source/Functions/Display/: common.cpp  common.hpp
Source/GLOBALS/: global_defines.hpp  global_variables.cpp  global_variables.hpp
